--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -12,19 +12,7 @@ security:
             id: fos_user.user_provider.username
 
     firewalls:
-      
-        api:
-            pattern:    ^/api
-            fos_oauth:  true
-            stateless:  true
-            
-       # oauth_token:
-       #     pattern:    ^/oauth/v2/token
-       #     security:   false
 
-       # oauth_authorize:
-       #     pattern:    ^/oauth/v2/auth$
-            
         main:
             pattern: ^/
             form_login:
@@ -32,7 +20,23 @@ security:
                 csrf_provider: form.csrf_provider
             logout:       true
             anonymous:    true
+      
+        api:
+            pattern: ^/api
+            fos_oauth: true
+            stateless: true
             
+        oauth_authorize:
+            pattern: ^/oauth/v2/auth$
+            form_login:
+                provider: fos_userbundle
+                check_path: /oauth/v2/auth_login_check
+                login_path: /oauth/v2/auth_login
+            anonymous: true
+            
+        oauth_token:
+            pattern: ^/oauth/v2/token
+            security: false
             # Add your favorite authentication process here
 
 
