--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -27,23 +27,22 @@ security:
             stateless: true
             
         oauth_authorize:
-            pattern: ^/oauth/v2/auth$
+            pattern: ^/oauth/v2/auth 
             form_login:
                 provider: fos_userbundle
                 check_path: /oauth/v2/auth_login_check
                 login_path: /oauth/v2/auth_login
+                
             anonymous: true
-            
         oauth_token:
             pattern: ^/oauth/v2/token
-            security: false
-            # Add your favorite authentication process here
-
+            security: false      
 
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/oauth/v2/auth_login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api, role: ROLE_API }
         - { path: ^/admin/, role: ROLE_ADMIN }
